<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.d3b8g.landbord.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_add"
            app:destination="@id/navigation_add" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notification"
            app:destination="@id/navigation_notification" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:label="@string/title_add"
        android:name="net.d3b8g.landbord.ui.add.AddFragment"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_navigation_add_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_income"
        android:name="net.d3b8g.landbord.ui.income.IncomeFragment"
        android:label="@string/title_income"
        tools:layout="@layout/fragment_income" />

    <fragment
        android:id="@+id/navigation_checklist"
        android:name="net.d3b8g.landbord.ui.checklist.CheckListFragment"
        android:label="@string/checklist"
        tools:layout="@layout/fragment_check_list" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="net.d3b8g.landbord.ui.notifications.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notifications"/>

</navigation>