<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shaped_background_modal_page"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <net.d3b8g.landbord.customComponentsUI.FragmentHeader
        android:id="@+id/checkListAddHeader"
        app:headerTitle="@string/add_new_check_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledCheckListTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_label_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fieldCheckListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:singleLine="true"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <net.d3b8g.landbord.customComponentsUI.InputDatePicker
        android:id="@+id/checkListRepeatDate"
        android:layout_width="match_parent"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkListIsRepeatable"
        android:text="Is repeatable"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/checkListSaveNew"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/checkListDelete"
        android:text="@string/delete"
        android:visibility="gone"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/colorRed"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>