<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/widget_shape_gold"
    android:padding="8dp"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@drawable/ic_whatshot_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="8dp"
            android:text="@string/be_our_sponsor"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/sponsor_timer"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/trial_banner_text"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/offer_sponsor"
        android:drawableLeft="@drawable/ic_favorite_24"
        android:text="@string/become_our_sponsor"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>