<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_margin="16dp"
    android:padding="8dp"
    android:background="@drawable/widget_shape"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:padding="6dp"
        android:orientation="horizontal"
        android:id="@+id/header_widget_busy"
        android:layout_width="match_parent"
        android:layout_height="36dp">
        <ImageView
            android:id="@+id/img_add_info"
            android:src="@drawable/ic_write"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_toRightOf="@id/img_add_info"
            android:textColor="@color/black"
            android:paddingStart="6dp"
            android:gravity="center|left"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/title_add_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageButton
            android:id="@+id/close_widget"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorMoreGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:gravity="center"
        android:textSize="14sp"
        android:layout_margin="4dp"
        android:text="@string/empty_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorMoreGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:padding="6dp"
        android:id="@+id/body_widget_busy"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="6dp"
            android:id="@+id/filledDepositField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_money"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/deposit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldDeposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="32"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="6dp"
            android:id="@+id/filledUsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_label_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="32"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="6dp"
            android:id="@+id/filledPhoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_contact_phone_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="32"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="6dp"
            android:id="@+id/filledDateToField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_calendar_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/date_to">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldDateTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="32"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="6dp"
            android:id="@+id/filledChatLinkField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_link_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/chat_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldChatLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="32"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/update_add_info"
            android:text="@string/update"
            android:textAllCaps="false"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>
    </LinearLayout>
</LinearLayout>