<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/widget_info"
    android:background="@drawable/widget_shape"
    android:orientation="vertical"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:padding="4dp"
        android:id="@+id/header_date"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/image_plug"
            android:src="@drawable/ic_calendar_28"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/bi_date"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorMoreGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginStart="6dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/bi_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/bi_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/bi_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/open_chat"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/open_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="4dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>